--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -27,12 +27,9 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@master
 
-            - name: Installing dependencies
-              run: pip install -r requirements-test.txt --target site-packages
-
             - name: Linting module
               continue-on-error: true
-              run: pylint commons
+              run: ./scripts/analyze.sh
 
             - name: Run pip-audit to check for vulnerabilities
               continue-on-error: true
