--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,12 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@master
 
+            - name: Get token
+              env:
+                GCP_TOKEN: ${{secrets.GCP_TOKEN}}
+              shell: bash
+              run: echo "$GCP_TOKEN" >> token.json
+
             - name: Launching tests
               run: ./scripts/robot.sh -l WARN -d tests
 
