--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -46,6 +46,12 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@master
 
+            - name: Get token
+              env:
+                GCP_TOKEN: ${{secrets.GCP_TOKEN}}
+              shell: bash
+              run: echo "$GCP_TOKEN" >> token.json
+
             - name: Launching tests
               continue-on-error: true
               run: ./scripts/robot.sh -l WARN -d tests
