--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,9 +27,11 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@master
 
+            - name: Installing dependencies
+              run: pip install -r requirements-test.txt
+
             - name: Linting module
-              continue-on-error: true
-              run: ./scripts/analyze.sh
+              run: pylint manager.py
 
             - name: Run pip-audit to check for vulnerabilities
               run: pip-audit -r requirements-test.txt --format json
