--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,7 +8,7 @@
 # Latest revision: 6th september 2024
 # -------------------------------------------------------
 
-name: Robotics Session Registration
+name: Robotics Session Registration Tool Pull Request Check
 
 on:
     pull_request:
