--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@
 # Latest revision: 6th september 2024
 # -------------------------------------------------------
 
-name: Robotics Session Registration
+name: Robotics Session Registration Tool Latest Check
 
 on:
     push:
