--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -18,12 +18,11 @@ on:
 jobs:
 
     register:
-        name: Laumching registration process
+        name: Launching registration process
         runs-on: ubuntu-latest
         container:
           image: docker://python:latest
           options: --entrypoint /bin/bash
-        needs: check
         steps:
             - name: Checkout code
               uses: actions/checkout@master
@@ -33,3 +32,11 @@ jobs:
                 GCP_TOKEN: ${{secrets.GCP_TOKEN}}
               shell: bash
               run: echo "$GCP_TOKEN" >> token.json
+
+            - name: Launch registration
+              env:
+                SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
+                RECIPIENT: ${{variables.RECIPIENT}}
+                SENDER: ${{variables.SENDER}}
+              run: ./register.sh -p ${SMTP_PASSWORD} -t ${RECIPIENT} -f ${SENDER}
+
