--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -38,5 +38,5 @@ jobs:
                 SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
                 RECIPIENT: ${{vars.RECIPIENT}}
                 SENDER: ${{vars.SENDER}}
-              run: ./register.sh -p ${SMTP_PASSWORD} -t ${RECIPIENT} -f ${SENDER}
+              run: ./scripts/register.sh -p ${SMTP_PASSWORD} -t ${RECIPIENT} -f ${SENDER}
 
