--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
               run: ./scripts/robot.sh -l WARN -d tests
 
             - name: Push test report to Github Pages
-              uses: peaceiris/actions-gh-pages@v3
+              uses: peaceiris/actions-gh-pages@main
               with:
                 publish_dir: ./tests
                 github_token: ${{ secrets.GH_ACCESS_TOKEN }}
