Tentative correction of test result publication Tentative adding repository_dispatch trigger to registration workflow

--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -14,6 +14,7 @@ on:
     schedule:
         - cron: '0 0 * * *'  # Runs at midnight UTC every day
     workflow_dispatch:  # Allows manual trigger from GitHub Actions
+    repository_dispatch: # Allows  trigger from GitHub API
 
 jobs:
 
