--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -30,14 +30,14 @@ jobs:
 
             - name: Get token
               env:
-                GCP_TOKEN: ${{secrets.MICROSOFT_TOKEN}}
+                MICROSOFT_TOKEN: ${{secrets.MICROSOFT_TOKEN}}
               shell: bash
-              run: echo "$GCP_TOKEN" >> token.json
+              run: echo "$MICROSOFT_TOKEN" >> token.json
 
             - name: Launch registration
               env:
-                SMTP_PASSWORD: ${{secrets.MAIL_PASSWORD}}
+                PASSWORD: ${{secrets.MAIL_PASSWORD}}
                 RECIPIENT: ${{vars.RECIPIENT}}
                 SENDER: ${{vars.SENDER}}
-              run: ./scripts/register.sh -p ${SMTP_PASSWORD} -t ${RECIPIENT} -f ${SENDER}
+              run: ./scripts/register.sh -p ${PASSWORD} -t ${RECIPIENT} -f ${SENDER}
 
