Refactoring working for microsoft

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, registration
+keys=root, registration, microsoft, google
 
 [handlers]
 keys=console, file
@@ -15,6 +15,18 @@ handlers=console
 level=DEBUG
 handlers=console
 qualname=registration
+propagate=0
+
+[logger_microsoft]
+level=DEBUG
+handlers=console
+qualname=microsoft
+propagate=0
+
+[logger_google]
+level=DEBUG
+handlers=console
+qualname=google
 propagate=0
 
 [handler_console]
