Working google integration

--- a/.github/workflows/register-sharkbots.yml
+++ b/.github/workflows/register-sharkbots.yml
@@ -37,5 +37,5 @@ jobs:
             - name: Launch registration
               env:
                 RECIPIENT: ${{vars.SHARKBOTS_RECIPIENT}}
-              run: ./scripts/register.sh -t ${RECIPIENT} -c conf/conf-sharkbots.json -a Google
+              run: ./scripts/register.sh -t ${RECIPIENT} -c conf/conf-sharkbots.json -a Google -f ftc.sharkbots@gmail.com
 
