--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -49,9 +49,9 @@ jobs:
 
             - name: Get token
               env:
-                MICROSOFT_TOKEN: ${{secrets.MICROSOFT_TOKEN}}
+                TOKEN: ${{secrets.MANTABOTS_TOKEN}}
               shell: bash
-              run: echo "$MICROSOFT_TOKEN" >> token.json
+              run: echo "$TOKEN" >> token.json
 
             - name: Launching tests
               run: ./scripts/robot.sh -l WARN -d tests
